dashboard mode and notes + icon fixed

--- a/frontend/src/views/Notes/statics/css/notes.css
+++ b/frontend/src/views/Notes/statics/css/notes.css
@@ -39,9 +39,12 @@
     height: 60px !important;
   }
   .notes_plusButton {
-    width: 20px;
-    height: 20px;
+    width: 40px !important;
+    height: 40px;
+    border-radius: 50%;
     cursor: pointer;
+  }
+  .notes_plusButtonImage {
   }
   .notes_plusButton:hover {
     background: var(--green2);
