--- a/frontend/src/utils/colors.css
+++ b/frontend/src/utils/colors.css
@@ -37,6 +37,7 @@
   --green4: #adf2db;
   --green5: #d1faec;
   --green6: #3fe6c7;
+  --green7: #52e6cbbb;
   --yellow: #ffce37;
   --yellow2: #ffecb4;
   --yellow3: #fbf7ea;
