--- a/frontend/src/views/QuizCreatorLanding/components/statics/css/customQuizCard.css
+++ b/frontend/src/views/QuizCreatorLanding/components/statics/css/customQuizCard.css
@@ -1,15 +1,96 @@
 @import "../../../../../utils/colors.css";
 .quizCard_root {
   width: 450px !important;
-  min-height: 400px !important;
+  min-height: 750px !important;
   border-radius: 15px !important;
   cursor: pointer;
+  position:relative;
 }
 .quizCard_root:hover {
   border: 2px solid var(--blue6);
 }
+.quizCard_crossbutton{
+  display:none;
+  position: absolute;
+  left:10px;
+  bottom:10px;
+  padding:10px;
+}
+.quizCard_crossbutton:hover,.popUp_crossbutton:hover{
+  opacity:0.8;
+  cursor:pointer;
+}
+.quizCard_root:hover .quizCard_crossbutton{
+  display: block;
+}
+.quizCard_popup{
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  z-index: 2;
+  background: rgba(15, 15, 15, 0.5);
+}
+.popUp_root{
+  position: fixed;
+  width: 50% !important;
+  height: 30% !important;
+  background:#fff;
+  top: 25%;
+  left:25%;
+  border-radius: 15px
+}
+.popUp_crossbutton{
+  position:absolute;
+  top:10px;
+  right:5px;
+}
+
+.popUp_line{
+  width:90%;
+  height:1px;
+  background-color: var(--grey6);
+}
+
+.popUp_midbar{
+  width:90%;
+  height:50%;
+  word-wrap:normal;
+}
+.popUp_midbar a{
+ font-size:1.5rem;
+ font-weight:500;
+}
+.popUp_midbar p{
+ font-size:1rem;
+ font-weight:500;
+ opacity:0.6
+}
+.popUp_botbar{
+  width:90%;
+}
+.popUp_confirm,.popUp_cancel{
+  width: 150px;
+  height: 45px;
+  background-color: var(--red4);
+  margin-top: 20px;
+  color: var(--white);
+  border-radius: 12px;
+  font-size: 1.1em;
+  border: none;
+  cursor: pointer;
+}
+.popUp_confirm{
+  background-color: var(--black) !important;
+}
+.popUp_confirm:hover,.popUp_cancel:hover{
+  transform:scale(1.05);
+  transition:350ms ease;
+}
+
 .quizCard_image {
-  width: 100% !important;
+  width: 99% !important;
 }
 .quizCard_infoContainer {
   text-indent: 30px;
