--- a/frontend/src/views/QuizCreatorLanding/components/statics/css/customQuizCard.css
+++ b/frontend/src/views/QuizCreatorLanding/components/statics/css/customQuizCard.css
@@ -4,26 +4,34 @@
   min-height: 750px !important;
   border-radius: 15px !important;
   cursor: pointer;
-  position:relative;
+  position: relative;
 }
 .quizCard_root:hover {
   border: 2px solid var(--blue6);
 }
-.quizCard_crossbutton{
-  display:none;
+.quizCard_crossButtonContainer {
   position: absolute;
-  left:10px;
-  bottom:10px;
-  padding:10px;
+  left: 25px;
+  bottom: 20px;
 }
-.quizCard_crossbutton:hover,.popUp_crossbutton:hover{
-  opacity:0.8;
-  cursor:pointer;
+.quizCard_crossbutton:nth-child(2) {
+  margin-left: 15px !important;
 }
-.quizCard_root:hover .quizCard_crossbutton{
-  display: block;
+.quizCard_crossbutton:hover,
+.popUp_crossbutton:hover {
+  opacity: 0.8;
+  cursor: pointer;
 }
-.quizCard_popup{
+.quizCard_root:hover .quizCard_crossbutton {
+  display: inline;
+}
+.popUp_resultSection {
+  width: 800px;
+  height: 580px;
+  overflow-y: auto;
+  border: 1px solid black;
+}
+.quizCard_popup {
   width: 100%;
   height: 100vh;
   position: fixed;
@@ -32,45 +40,68 @@
   z-index: 2;
   background: rgba(15, 15, 15, 0.5);
 }
-.popUp_root{
+.resultPopUp_root {
   position: fixed;
-  width: 50% !important;
-  height: 30% !important;
-  background:#fff;
+  width: 900px !important;
+  height: 700px !important;
+  background: #fff;
+  top: 12%;
+  left: 20%;
+  border-radius: 15px;
+}
+.popUp_root {
+  position: fixed;
+  width: 900px !important;
+  height: 280px !important;
+  background: #fff;
   top: 25%;
-  left:25%;
-  border-radius: 15px
+  left: 20%;
+  border-radius: 15px;
 }
-.popUp_crossbutton{
-  position:absolute;
-  top:10px;
-  right:5px;
+.popUp_crossButton {
+  width: 18px;
+  height: 18px;
+  padding: 12px;
+  border-radius: 100%;
+  cursor: pointer;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  margin: 0;
 }
-
-.popUp_line{
-  width:90%;
-  height:1px;
+.popUp_crossButton:hover {
+  background: var(--red4);
+  background: radial-gradient(
+    circle,
+    rgba(241, 75, 75, 1) 0%,
+    rgba(241, 75, 75, 0.23) 0%
+  );
+}
+.popUp_line {
+  width: 90%;
+  height: 1px;
   background-color: var(--grey6);
 }
 
-.popUp_midbar{
-  width:90%;
-  height:50%;
-  word-wrap:normal;
+.popUp_midbar {
+  width: 90%;
+  height: 50%;
+  word-wrap: normal;
 }
-.popUp_midbar a{
- font-size:1.5rem;
- font-weight:500;
+.popUp_midbar a {
+  font-size: 1.5rem;
+  font-weight: 500;
 }
-.popUp_midbar p{
- font-size:1rem;
- font-weight:500;
- opacity:0.6
+.popUp_midbar p {
+  font-size: 1rem;
+  font-weight: 500;
+  opacity: 0.6;
 }
-.popUp_botbar{
-  width:90%;
+.popUp_botbar {
+  width: 90%;
 }
-.popUp_confirm,.popUp_cancel{
+.popUp_confirm,
+.popUp_cancel {
   width: 150px;
   height: 45px;
   background-color: var(--red4);
@@ -81,12 +112,13 @@
   border: none;
   cursor: pointer;
 }
-.popUp_confirm{
+.popUp_confirm {
   background-color: var(--black) !important;
 }
-.popUp_confirm:hover,.popUp_cancel:hover{
-  transform:scale(1.05);
-  transition:350ms ease;
+.popUp_confirm:hover,
+.popUp_cancel:hover {
+  transform: scale(1.05);
+  transition: 350ms ease;
 }
 
 .quizCard_image {
