--- a/frontend/src/views/Login/statics/css/loginCommon.css
+++ b/frontend/src/views/Login/statics/css/loginCommon.css
@@ -1,7 +1,7 @@
 @import "../../../../utils/colors.css";
 
 @media only screen and (min-width: 1280px) {
-  .loginCommon_loginButton {
+  .loginCommon_loginButton,.loginCommon_signupButton {
     width: 160px;
     height: 45px;
     background-color: var(--red4);
@@ -9,6 +9,9 @@
     margin-top: 20px;
     border-radius: 12px;
     font-size: 1em;
+  }
+  .loginCommon_signupButton{
+    background-color: var(--black);
   }
   .loginCommon_label {
     font-weight: normal;
