--- a/frontend/src/views/Login/statics/css/verify.css
+++ b/frontend/src/views/Login/statics/css/verify.css
@@ -1,5 +1,5 @@
 @import "../../../../utils/colors.css";
-@media only screen and (min-width: 1280px) {
+@media only screen and (min-width: 720px) {
   .verify_button {
     max-width: 200px;
     min-width: 200px;
@@ -8,6 +8,9 @@
     color: var(--white);
     border-radius: 15px;
     font-size: 1.1em;
+  }
+  .verify_buttonContainer {
+    margin-top: 50px !important;
   }
 }
 @media only screen and (min-width: 1920px) {
