--- a/frontend/src/views/Profile/components/css/profileTabs.css
+++ b/frontend/src/views/Profile/components/css/profileTabs.css
@@ -28,6 +28,7 @@
     margin: 0px;
     font-size: 0.95em;
     font-weight: bold;
+    white-space: pre-wrap;
     text-overflow: ellipsis;
   }
   .profileTabs_departname {
