--- a/frontend/src/utils/colors.css
+++ b/frontend/src/utils/colors.css
@@ -38,6 +38,7 @@
   --green5: #d1faec;
   --green6: #3fe6c7;
   --green7: #52e6cbbb;
+  --green8: #1eaf0b;
   --yellow: #ffce37;
   --yellow2: #ffecb4;
   --yellow3: #fbf7ea;
