--- a/frontend/src/components/DashboardLayout/statics/css/online.css
+++ b/frontend/src/components/DashboardLayout/statics/css/online.css
@@ -26,7 +26,7 @@
     width: 10px;
     height: 10px;
     border-radius: 50%;
-    background: var(--red1);
+    background: var(--green8);
     position: absolute;
     top: 25px;
     left: 5px;
