--- a/web/src/views/Login/statics/css/loginCommon.css
+++ b/web/src/views/Login/statics/css/loginCommon.css
@@ -1,7 +1,8 @@
 @import "../../../../utils/colors.css";
 
 @media only screen and (min-width: 1280px) {
-  .loginCommon_loginButton,.loginCommon_signupButton {
+  .loginCommon_loginButton,
+  .loginCommon_signupButton {
     width: 160px;
     height: 45px;
     background-color: var(--red4);
@@ -10,7 +11,7 @@
     border-radius: 12px;
     font-size: 1em;
   }
-  .loginCommon_signupButton{
+  .loginCommon_signupButton {
     background-color: var(--black);
   }
   .loginCommon_label {
