fix: Statics url in email

--- a/backend/templates/email-templates/verify-account.html
+++ b/backend/templates/email-templates/verify-account.html
@@ -98,7 +98,7 @@
     <div id="container">
         <div id="logo">
             <!-- FIXME: <img src="{{logo_link}}"> -->
-            <img src="http://localhost:3001/logo-large.svg" />
+            <img src="{{frontbase}}/logo-large.svg" />
         </div>
         <div id="accentLine1"></div>
         <div id="accentLine2"></div>
